# AIME-based-Explanation-System-for-ChatGPT-Outputs

./: .gitignore  Instructions_explanation_system.md  LLM出力の因果・推論関係可視化に関する調査報告.docx  RAG.ipynb  RAG_and_XAI_guide.txt  README.md  app_main].py  config.py  evaluation.py  explanation_metrics.db  graph_visual.py  graph_visualization.py  knowledge_base.py  main.py  models.py  pyproject.toml  retriever.py  system.py  test2.py  test3.py  ui.py  verification.py  xai.py  プレゼンテーション1.pptx
flow/: graph_visual.md
knowledge_base/: AIME_concept.txt  RAG_guide.txt  XAI_guide.txt  attribute_enhancement.txt  evaluation_metrics.txt
loadtext2/: text1.txt
rag/: RAG.ipynb
test/: RAG.ipynb  test.py  test3.py
