[project]
name = "aime-based-explanation-system-for-chatgpt-outputs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.6",
    "gradio>=5.25.2",
    "ipykernel>=6.29.5",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.14",
    "matplotlib>=3.10.1",
    "openai>=1.75.0",
    "pip>=25.0.1",
    "pypdf>=5.4.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.6.1",
    "setuptools>=79.0.0",
    "tiktoken>=0.9.0",
    "transformers>=4.51.3",
    "wheel>=0.45.1",
]
